--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+
+#MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/buzz?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+#Hibernate
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=info
+logging.level.org.springframework.security=DEBUG
+
 spring.application.name=buzz
