Added spring security and main page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=root
 
 #Hibernate
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.session.jdbc.initialize-schema=always
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=info
 logging.level.org.springframework.security=DEBUG
