--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,12 @@ logging.level.org.hibernate.SQL=info
 logging.level.org.springframework.security=DEBUG
 
 spring.application.name=buzz
+
+#email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=deadthghost12321@gmail.com
+spring.mail.password=
+spring.mail.test-connection=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
